--- a/historia_clinica/templates/HistoriaClinica/historia_clinica.html
+++ b/historia_clinica/templates/HistoriaClinica/historia_clinica.html
@@ -10,6 +10,7 @@
                 <button type="button" class="btn btn-success waves-effect waves-light"
                         onClick=" window.location.href='/historia_clinica/create/' ">+
                 </button>
+                <a href="{% url 'historia_search' %}" class="btn btn-primary">Buscar Historia Clínica por Cédula</a>
             </div>
         </div>
     </div>
